--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
 
-      <div class="photo-container">
+      <!-- <div class="photo-container">
         <h2>Results</h2>
         <ul>
           <li>
@@ -48,7 +48,7 @@
             <p>You search did not return any results. Please try again.</p>
           </li>
         </ul>
-      </div>
+      </div> -->
 
     </div>
   </body>
