--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container"> -->
       
       <!-- <form class="search-form">
         <input type="search" name="search" placeholder="Search" required/>
@@ -49,6 +49,6 @@
         </ul>
       </div> -->
 
-    </div>
+    <!-- </div> -->
   </body>
 </html>
